force-app/main/default/objects/CBOSS_Fee_Mapping__mdt/CBOSS_Fee_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>CBOSS_Fee_Mapping</label>
    <pluralLabel>CBOSS_Fee_Mappings</pluralLabel>
</CustomObject>