force-app/main/default/objects/CBOSS_Fee_Mapping__mdt/fields/prgTransRecType__c.field-meta.xml
<CustomField>
    <fullName>prgTransRecType__c</fullName>
    <label>prgTransRecType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>