force-app/main/default/objects/CBOSS_Fee_Mapping__mdt/fields/secondAppFeeStdDetailName__c.field-meta.xml
<CustomField>
    <fullName>secondAppFeeStdDetailName__c</fullName>
    <description>Adding a new field for tracking the Second Application Fee for the new SUTQ Registration Process Question on FCC and CCC Programs</description>
    <label>secondAppFeeStdDetailName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>