force-app/main/default/objects/CBOSS_Fee_Mapping__mdt/fields/stdDetailName__c.field-meta.xml
<CustomField>
    <fullName>stdDetailName__c</fullName>
    <label>stdDetailName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>